task3-istio/network-policies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: payments

spec:

  podSelector: {}

  policyTypes:
    - Ingress
    - Egress
